# Gato-Juego

./: .favorites.json  .gitignore  CMakeLists.txt  Gato Juego.sln  LICENSE  README.md  SOURCES
Assets/: Sprite-0001.aseprite  Sprite-0002.aseprite  failed-debug-map.tmx
Assets/Debug-Map/: debug-map.tmx
Game/: Gato Juego.vcxproj  Gato Juego.vcxproj.filters
Game/Source/: Animation.h  App.cpp  App.h  Audio.cpp  Audio.h  Checkpoint.cpp  Checkpoint.h  Defs.h  DogEnemy.cpp  DogEnemy.h  DynArray.h  Entity.h  EntityManager.cpp  EntityManager.h  FadeToBlack.cpp  FadeToBlack.h  FinalScene.cpp  FinalScene.h  Food.cpp  Food.h  FoodItem.cpp  FoodItem.h  FurBall.cpp  FurBall.h  GuiControl.h  GuiControlButton.cpp  GuiControlButton.h  GuiControlLabel.cpp  GuiControlLabel.h  GuiManager.cpp  GuiManager.h  Input.cpp  Input.h  Item.cpp  Item.h  Log.cpp  Log.h  Main.cpp  MainMenu.cpp  MainMenu.h  (+32 more)
Game/Source/States/: CMakeLists.txt
Game/Source/States/DogEnemy/: DogEnemyAttackState.cpp  DogEnemyAttackState.h  DogEnemyDeadState.cpp  DogEnemyDeadState.h  DogEnemyHurtState.cpp  DogEnemyHurtState.h  DogEnemyIdleState.cpp  DogEnemyIdleState.h  DogEnemyMoveState.cpp  DogEnemyMoveState.h
Game/Source/States/OwlEnemy/: OwlEnemyAttackState.cpp  OwlEnemyAttackState.h  OwlEnemyDeadState.cpp  OwlEnemyDeadState.h  OwlEnemyHurtState.cpp  OwlEnemyHurtState.h  OwlEnemyIdleState.cpp  OwlEnemyIdleState.h  OwlEnemyMoveState.cpp  OwlEnemyMoveState.h
Game/Source/States/Player/: IdleState.cpp  IdleState.h  PlayerClimbState.cpp  PlayerClimbState.h  PlayerDeadState.cpp  PlayerDeadState.h  PlayerHurtState.cpp  PlayerHurtState.h  PlayerIdleState.cpp  PlayerIdleState.h  PlayerMoveState.cpp  PlayerMoveState.h  PlayerNoClipState.cpp  PlayerNoClipState.h  PlayerWinState.cpp  PlayerWinState.h
Output/: config.xml  save_game.xml
Output/Assets/Audio/Fx/: CatMeow2.flac
Output/Assets/Audio/UnfilteredAudios/barn_owl/flac/: barn_owl_01.flac
Output/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/: ._footsteps
Output/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/dog/: ._license.txt
Output/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/gravel/: ._license.txt
Output/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/tile/: ._license.txt
Output/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/water/: ._license.txt
Output/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/wood/: ._license.txt
Output/Assets/Maps/Debug-Map/: debug-map.tmx
Output/Assets/Maps/Debug-Map-2/: debug-map-2.tmx
Output/Assets/Maps/Level-1/: Level-1-map.tmx  Metadata16x16.aseprite  idea.kra~  livesAnimation.png~
Output/Assets/Maps/Urban-Map/: urban-map.tmx  urban-tilemap.kra  urban-tilemap.kra~
Output/Assets/Maps/test-autotile/: debug-tiles.tsx  map-autotile.tmx
Output/Assets/Textures/: cat-fur-ball.png~  icon.png~
Output_Linux/: Gato-Juego  config.xml  heaptrack.Gato-Juego.57653.zst  heaptrack.Gato-Juego.58009.zst
Output_Linux/Assets/Audio/UnfilteredAudios/: dog_0.7z
Output_Linux/Assets/Audio/UnfilteredAudios/barn_owl/: README.txt
Output_Linux/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/bones/: ._license.txt
Output_Linux/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/boots/: ._license.txt
Output_Linux/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/grass/: ._license.txt
Output_Linux/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/mech/: ._license.txt
Output_Linux/Assets/Audio/UnfilteredAudios/footsteps_0/__MACOSX/footsteps/metal/: ._license.txt
Output_Linux/Assets/Maps/Debug-Map/: Sprite-0002.aseprite
Output_Linux/Assets/Maps/Debug-Map-2/: debug-map-2.tmx
Output_Linux/Assets/Maps/Final-Level/: Final-Level-map.tmx  MapMetadata.png~  Sprite-0002.aseprite  cat-fur-ball.kra  cat-fur-ball.kra~
Output_Linux/Assets/Maps/Level-1/: .cat-fur-ball.kra-autosave.kra  Level-1-map.tmx  idea.kra
Output_Linux/Assets/Maps/Urban-Map/: urban-tilemap-test.kra  urban-tilemap-test.kra~  urban-tilemap.png~
Output_Linux/Assets/Maps/test-autotile/: rules.tmx
Output_Linux/Assets/Textures/: bridge.png~
linux_release_test/: Gato-Juego  commando-generar-dependencias.txt  config.xml
linux_release_test/Assets/Maps/Debug-Map/: debug-map.tmx
linux_release_test/Assets/Maps/Level-1/: Level-1-map.tmx  rules.tmx
linux_release_test/Assets/Maps/test-autotile/: terrain-tiles.tsx
linux_release_test/lib/: libBox2D.so.2.3.0  libSDL2_image-2.0.so.0  libbrotlienc.so.1  libhwy.so.1  libjpeg.so.8  libjxl.so.0.8  libpugixml.so.1  libsharpyuv.so.0  libwebp.so.7  libwebpdemux.so.2
linux_release_test/lib2/: libSDL2-2.0.so.0.2800.5  libSDL2_mixer-2.0.so.0.600.3  libjxl.so.0.8.2
